# self-correcting-agents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench_out_cua/: results.json  results.md  traces.jsonl
bench_out_sqlq/: results.json  results.md  traces.jsonl
docs/: _config.yml  demo.html  demo_data.js  index.md
examples/: run_demo.py
skills/self-correct/: README.md  SKILL.md
src/selfcorrect/: __init__.py  __main__.py  bench.py  cli.py  critic.py  domains.py  loop.py  trace.py  types.py  validators.py
src/selfcorrect/cua/: __init__.py  errors.py  feedback_templates.py  loader.py  rules.py  scoring.py  ui.py
src/selfcorrect/engines/: __init__.py  anthropic_engine.py  hermes.py  simulated.py
src/selfcorrect/invoices/: __init__.py  errors.py  feedback_templates.py  generate_corpus.py  ground_truth.json  loader.py  prompts.py  rules.py  schema.py  scoring.py
src/selfcorrect/invoices/corpus/: inv_001.txt  inv_002.txt  inv_003.txt  inv_004.txt  inv_005.txt  inv_006.txt  inv_007.txt  inv_008.txt  inv_009.txt  inv_010.txt  inv_011.txt  inv_012.txt  inv_013.txt  inv_014.txt  inv_015.txt  inv_016.txt  inv_017.txt  inv_018.txt  inv_019.txt  inv_020.txt  inv_021.txt  inv_022.txt  (+2 more)
src/selfcorrect/sqlq/: __init__.py  database.py  errors.py  feedback_templates.py  loader.py  rules.py  scoring.py
tests/: conftest.py  test_bench_e2e.py  test_critic.py  test_cua.py  test_determinism.py  test_domains.py  test_loop.py  test_optional_anthropic.py  test_simulated_engine.py  test_sqlq.py  test_validators.py
tools/: export_demo_traces.py
